--- a/homepage.html
+++ b/homepage.html
@@ -68,7 +68,7 @@
       <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png "
         alt="logo" style="width: 100px;height:50px;float:right">
       <a href="homepage.html" class="active">Home</a>
-      <a href="#Adven">Red Dead Redemption 2</a>
+      <a href="rdr2.html">Red Dead Redemption 2</a>
       <a href="valorant.html">Valorant</a>
       <a href="needforspeed.html">Need For Speed</a>
       <a href="quiz.html">Quiz</a>
