--- a/rdr2.html
+++ b/rdr2.html
@@ -49,6 +49,7 @@
   }
 </style>
 
+
 <body id="body">
 
     <img src="https://user-images.githubusercontent.com/94490873/145647754-21a66e77-2c8a-435a-ae35-f2d644c54d14.png"
@@ -64,8 +65,8 @@
                     <img src="https://user-images.githubusercontent.com/94490873/145520543-178c115d-c35d-4eba-9ec9-3fcf22d60600.png "
                         alt="logo" style="width: 100px;height:50px;float:right">
                     <a href="homepage.html" class="active">Home</a>
-                    <a href="#Adven">Adventure game</a>
-                    <a href="#Racer">Need for speed: Rivals</a>
+                    <a href="#rdr2.html">Adventure game</a>
+                    <a href="needforspeed.html">Need for speed: Rivals</a>
                     <a href="valorant.html">Multiplayer shooters</a>
                     <a href="quiz.html">Quiz</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -82,18 +83,24 @@
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
+      <a href="valorant.html">
       <img class = "slideshow-img" src="https://user-images.githubusercontent.com/94490873/146235575-c7a57f3a-6d0b-4ec7-96da-32781dc22b78.jpeg" style="width:100%">
+    </a>
       <div class="text">Valorant</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
+      <a href="homepage.html">
       <img class = "slideshow-img" src="https://user-images.githubusercontent.com/94490873/145293557-65b0b2a4-8dc2-49b0-ba19-75da08e40f10.jpeg" style="width:100%">
+    </a>
       <div class="text">Home</div>
     </div>
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
+      <a href="rdr2.html">
       <img class = "slideshow-img" src="https://user-images.githubusercontent.com/94490873/146279031-a9264402-f91f-4299-a5d3-4d4794e65886.png" style="width:100%">
+    </a>
       <div class="text">Red Dead Redemption</div>
     </div>
     <br>
